[FEAT] 컨설팅 요구사항 (도면 사진) 저장 API 구현
