# swagger/consult.swagger.yml
@@ -497,4 +497,90 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /consulting/requirements/blueprint:
+    post:
+      tags:
+        - Consulting
+      summary: 집 도면 이미지 추가
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: consulting_id
+          in: formData
+          required: true
+          type: bigint
+          description: 컨설팅 ID
+          example: 1
+        - name: directory
+          in: formData
+          required: true
+          type: string
+          description: S3 폴더 경로
+          example: "abcd"
+        - name: image
+          in: formData
+          type: file
+          description: 파일 업로드
+          required: true
+      
+      responses:
+        '200':
+          description: 집 도면 이미지 추가 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: 
+                  "blueprint_id": 1
+                  "consulting_id": 1
+                  "s3_key": "abcd"
+                  "status": "step3"
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
 
